src/objects/Contact_Role_Certification__c.object
<CustomObject>
    <fields>
        <fullName>Account_Contact_Role__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Contact Role</label>
        <referenceTo>Account_Contact_Role__c</referenceTo>
        <relationshipLabel>Contact Role Certifications</relationshipLabel>
        <relationshipName>Role_Certifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AssessmentId__c</fullName>
        <description>Assessment ID. This code must be unique for each Assessment</description>
        <externalId>true</externalId>
        <label>AssessmentId</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Certification__c</fullName>
        <label>Certification</label>
        <referenceTo>Certification__c</referenceTo>
        <relationshipLabel>Contact Role Certifications</relationshipLabel>
        <relationshipName>Contact_Role_Certifications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contact_Role_certification_name_Formula__c</fullName>
        <formula>Account_Contact_Role__r.Company_Code__c + &quot; &quot; + Certification__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Role certification Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Assignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>LMS	Course Assignment Lookup</description>
        <inlineHelpText>LMS	Course Assignment Lookup</inlineHelpText>
        <label>Course Assignment</label>
        <referenceTo>Course_Assignment__c</referenceTo>
        <relationshipLabel>Contact Role Certifications</relationshipLabel>
        <relationshipName>Contact_Role_Certifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Enrolled__c</fullName>
        <label>Enrolled</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiration_Status__c</fullName>
        <formula>IF( Expiration_Date__c &lt;= TODAY(),&quot;Expired&quot;,&quot;Active&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expiration Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_Status__c</fullName>
        <label>Integration Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proficiency__c</fullName>
        <label>Proficiency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Level 2</fullName>
                </value>
                <value>
                    <fullName>Level 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>LMS Certification Status</description>
        <inlineHelpText>LMS Certification Status</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Registered</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed Success</fullName>
                </value>
                <value>
                    <fullName>Completed Failed</fullName>
                </value>
                <value>
                    <fullName>Dropped</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stopped__c</fullName>
        <description>Describes if a expired assessment is to be rewed or if it has been stopped</description>
        <label>Stopped</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Training_Contact_Role_Detail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Training Contact Role Detail reference</description>
        <inlineHelpText>Training Contact Role Detail reference</inlineHelpText>
        <label>Training Contact Role Detail</label>
        <referenceTo>Training_Contact_Role_Details__c</referenceTo>
        <relationshipLabel>Contact Role Certifications</relationshipLabel>
        <relationshipName>Contact_Role_Certifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Contact Role Certification</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account_Contact_Role__c</columns>
        <columns>Certification__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Expiration_Date__c</columns>
        <columns>Proficiency__c</columns>
        <columns>Expiration_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Contact Role Certification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contact Role Certifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>